<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuScan"
        android:title="@string/menu_scan"
        android:icon="@drawable/ic_toolbar_scan_24dp"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menuSend"
        android:title="@string/menu_send"
        android:icon="@drawable/ic_toolbar_send_24dp"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/menuRequestLegacy"
        android:title="@string/wallet_options_request_legacy"
        android:icon="@drawable/ic_menu_request_legacy_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSync"
        android:title="@string/menu_sync"
        android:icon="@drawable/ic_menu_sync_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuBackupRecovery"
        android:title="@string/menu_backup_recovery"
        android:icon="@drawable/ic_menu_backup_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSecurity"
        android:title="@string/menu_security"
        android:icon="@drawable/ic_menu_security_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuAddressBook"
        android:title="@string/menu_address_book"
        android:icon="@drawable/ic_menu_contacts_24dp"
        app:showAsAction="never" />
    <item
        android:title="@string/menu_wallet_tools"
        android:icon="@drawable/ic_menu_tools_24dp"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menuImportWif"
                android:title="@string/wallet_tool_import_wif"
                android:icon="@drawable/ic_menu_key_24dp" />
            <item
                android:id="@+id/menuWatchOnlyWallet"
                android:title="@string/wallet_tool_watch_only"
                android:icon="@drawable/ic_menu_watch_only_24dp" />
            <item
                android:id="@+id/menuPaperWallet"
                android:title="@string/wallet_tool_paper_wallet"
                android:icon="@drawable/ic_menu_paper_wallet_24dp" />
        </menu>
    </item>
    <item
        android:id="@+id/menuAbout"
        android:title="@string/menu_about"
        android:icon="@drawable/ic_menu_about_24dp"
        app:showAsAction="never" />
</menu>
